<resources>
    <string name="app_name">SeriesThatILike</string>

    <string name="title_welcome">Welcome to the app, </string>
    <string name="title_app_name">Series That I Like</string>

    <string name="title_create_account">Create New Account</string>
    <string name="title_login_account">Enter with your Account</string>

    <string name="txt_name">Name: </string>
    <string name="txt_sub_name">Name\'s here: </string>

    <string name="txt_email">E-mail: </string>
    <string name="txt_sub_email">E-mail\'s here: </string>
    <string name="txt_description">Description\'s here: </string>

    <string name="txt_password">Password: </string>
    <string name="txt_sub_password">Password\'s here: </string>

    <string name="txt_link_login_account">Did you have an Account? Login Here. </string>

    <string name="button_create_account">Create your Account</string>
    <string name="button_add_series">Add Series</string>
    <string name="button_login">Login</string>

    <string name="txt_name_series">Series Name: </string>
    <string name="txt_description_series">Series Description: </string>

    <string name="title_add_series">Add New Series</string>
    <string name="txt_name_add_series">Series Name: </string>
    <string name="txt_description_add_series">Synopses </string>

    <string name="txt_edt_description_add_series">Synopses\' here: </string>

    <string name="dt_pretend_add_series">Date Pretend Watch</string>
    <string name="dt_date_add_series">Date\'s here: </string>

    <string name="txt_episode_add_series">Episode</string>
    <string name="txt_edt_episode_add_series">0</string>

    <string name="txt_season_add_series">Season</string>
    <string name="txt_edt_season_add_series">0</string>

    <string name="txt_title_platform_add_series">Platform</string>
    <string name="txt_platform_add_series">Platform\' here</string>

</resources>