<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_geo"
    android:paddingHorizontal="16dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/txt_title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="12dp"

        android:gravity="center"

        android:text="@string/title_welcome"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/txt_title_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_title_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="12dp"

        android:gravity="center"

        android:text="@string/title_app_name"
        android:textColor="@color/purple"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/rl_create_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/rl_create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:layout_marginTop="15dp"
        android:padding="12dp"

        android:background="@drawable/design_create_account"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >

        <TextView
            android:id="@+id/txt_title_account_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginHorizontal="10dp"

            android:text="@string/title_create_account"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@id/rl_create_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_sub_name_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"

            android:text="@string/txt_name"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_name_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/design_edit"
            android:padding="14dp"

            android:textColor="@color/blue"
            android:textSize="14dp"

            android:hint="@string/txt_sub_name"
            android:textColorHint="@color/blue"
            android:inputType="textPersonName"
        />

        <TextView
            android:id="@+id/txt_sub_email_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"

            android:text="@string/txt_email"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_email_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/design_edit"
            android:padding="14dp"

            android:textColor="@color/blue"
            android:textSize="14dp"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_sub_email"
            android:inputType="textEmailAddress"
        />

        <TextView
            android:id="@+id/txt_sub_password_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"

            android:text="@string/txt_password"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_password_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/design_edit"
            android:padding="14dp"

            android:textColor="@color/blue"
            android:textSize="14dp"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_sub_password"
            android:inputType="textPassword"
        />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"

            android:backgroundTint="@color/blue"
            android:text="@string/button_create_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="13dp" />

        <TextView
            android:id="@+id/txt_link_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"

            android:gravity="center_horizontal"
            android:text="@string/txt_link_login_account"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>