<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_geo"
    android:paddingHorizontal="16dp"
    tools:context=".activities.UserLogin">

    <LinearLayout
        android:id="@+id/rl_create_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:layout_marginTop="15dp"
        android:padding="12dp"

        android:background="@drawable/design_create_account"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/txt_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginHorizontal="10dp"

            android:text="@string/title_login_account"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@id/rl_create_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
            android:id="@+id/txt_sub_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"

            android:text="@string/txt_email"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/design_edit"
            android:padding="14dp"

            android:textColor="@color/blue"
            android:textSize="14dp"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_sub_email"
            android:inputType="textEmailAddress"
        />

        <TextView
            android:id="@+id/txt_sub_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"

            android:text="@string/txt_password"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:background="@drawable/design_edit"
            android:padding="14dp"

            android:textColor="@color/blue"
            android:textSize="14dp"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_sub_password"
            android:inputType="textPassword"
        />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"

            android:layout_gravity="center"

            android:paddingHorizontal="50dp"

            android:backgroundTint="@color/blue"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:letterSpacing="0.1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="13dp"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>