<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_geo"
    tools:context=".activities.CreateSeries">

    <RelativeLayout
        android:id="@+id/ll_add_series_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="12dp"

        android:background="@drawable/design_add_serie"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >

        <TextView
            android:id="@+id/txt_title_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"

            android:text="@string/title_add_series"
            android:textColor="@color/purple"
            android:textSize="26sp"
            android:textStyle="bold"

            android:layout_centerHorizontal="true"
        />

        <TextView
            android:id="@+id/txt_name_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/txt_title_add_series"

            android:text="@string/txt_name_add_series"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_edt_name_add_series"
            android:layout_width="170dp"
            android:layout_height="wrap_content"

            android:layout_below="@id/txt_name_add_series"

            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"

            android:alpha="0.8"

            android:background="@drawable/design_edit"
            android:hint="@string/txt_sub_name"
            android:inputType="textPersonName"
            android:maxLength="20"

            android:padding="12dp"
            android:textAlignment="textStart"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_date_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"

            android:layout_below="@id/txt_title_add_series"
            android:layout_toRightOf="@id/txt_edt_name_add_series"

            android:text="@string/dt_pretend_add_series"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_date_add_series"
            android:layout_width="170dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:layout_below="@id/txt_date_add_series"
            android:layout_toRightOf="@id/txt_edt_name_add_series"

            android:background="@drawable/design_edit"
            android:padding="12dp"

            android:textColor="@color/blue"
            android:textSize="14sp"
            android:alpha="0.8"

            android:textColorHint="@color/blue"
            android:hint="@string/dt_date_add_series"
            android:inputType="date|text"
        />

        <TextView
            android:id="@+id/txt_episode_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"

            android:layout_below="@id/txt_edt_name_add_series"

            android:text="@string/txt_episode_add_series"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/txt_edt_episode_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:layout_below="@id/txt_episode_add_series"
            android:layout_alignRight="@id/txt_episode_add_series"

            android:background="@drawable/design_edit"
            android:padding="12dp"

            android:textColor="@color/blue"
            android:textSize="14sp"
            android:alpha="0.8"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_edt_episode_add_series"
            android:inputType="numberDecimal"
        />

        <TextView
            android:id="@+id/txt_season_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"

            android:layout_below="@id/txt_edt_name_add_series"
            android:layout_toRightOf="@id/txt_episode_add_series"

            android:text="@string/txt_season_add_series"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/txt_edt_season_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"

            android:layout_below="@id/txt_episode_add_series"
            android:layout_toRightOf="@id/txt_episode_add_series"
            android:layout_alignLeft="@id/txt_season_add_series"

            android:background="@drawable/design_edit"
            android:padding="12dp"

            android:textColor="@color/blue"
            android:textSize="14sp"
            android:alpha="0.8"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_edt_episode_add_series"
            android:inputType="numberDecimal"
        />

        <TextView
            android:id="@+id/txt_platform_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/txt_edt_name_add_series"
            android:layout_toRightOf="@id/txt_season_add_series"

            android:text="@string/txt_img_platform_add_series"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <ImageView
            android:id="@+id/txt_img_platform_add_series"
            android:layout_width="45dp"
            android:layout_height="45dp"

            android:layout_below="@id/txt_platform_add_series"
            android:layout_toRightOf="@id/txt_season_add_series"
            android:layout_alignLeft="@id/txt_platform_add_series"

            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"

            android:scaleType="centerCrop"
            android:src="@drawable/img_outline_broken_image"
        />

        <ImageButton
            android:id="@+id/imgButton_watch_watched_will_watch_add_series"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginStart="10dp"

            android:layout_toRightOf="@id/txt_platform_add_series"
            android:layout_below="@id/txt_platform_add_series"

            android:scaleType="centerInside"
            android:src="@drawable/watching"
            android:background="@color/grey"
        />

        <ImageButton
            android:id="@+id/img_add_episodes_series_list"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginStart="10dp"
            android:src="@drawable/add_episodes_circle_outline"
            android:background="@color/grey"
            android:scaleType="centerCrop"

            android:layout_toRightOf="@id/imgButton_watch_watched_will_watch_add_series"
            android:layout_below="@id/txt_platform_add_series"
            android:layout_alignBottom="@id/imgButton_watch_watched_will_watch_add_series"
        />

        <TextView
            android:id="@+id/txt_description_add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/txt_edt_episode_add_series"

            android:text="@string/txt_description_add_series"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/txt_edt_description_add_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_below="@id/txt_description_add_series"

            android:background="@drawable/design_edit"
            android:padding="13dp"

            android:textColor="@color/blue"
            android:textSize="14dp"
            android:alpha="0.8"

            android:textColorHint="@color/blue"
            android:hint="@string/txt_description"
            android:maxLength="60"
            android:inputType="textAutoComplete"
        />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"

            android:layout_below="@id/txt_edt_description_add_series"

            android:backgroundTint="@color/blue"
            android:text="@string/button_add_series"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="13dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>